# wdai

./: .autonomy-config.json  .autonomy-triggers.sh  .decision-log.json  .gitignore  .learning-mode-v2.md  .learning-mode.md  .mandatory_commands.md  .thought-stream.md  AGENTS.md  AUTO_MEMORY_ENABLED.md  GITHUB_BACKUP_GUIDE.md  HEARTBEAT.md  IDENTITY.md  LICENSE  MEMORY.md  OPTIMIZATION_REPORT.md  README.md  SOUL.md  STATUS.md  WDAI.md  WDAI_ARCHITECTURE.md  ai_morning_report_2026-03-18.md  baidu_pan_skill.py  bilibili_fav_analysis.md  clawflow-cover.html  create_doc_with_images.py  create_port_ppt.js  create_port_ppt_animated.js  create_port_ppt_artistic.js  create_port_ppt_compact.js  create_port_ppt_final.js  create_port_ppt_fixed.js  create_port_ppt_new.js  create_port_ppt_premium.js  create_port_ppt_professional.js  create_port_ppt_python.py  create_port_ppt_swimlane.js  create_port_ppt_v2.js  create_port_ppt_v3.js  create_port_ppt_v4.js  (+37 more)
kimi-mcp-server/: FINAL_REPORT.md  MULTI_AGENT_EVOLUTION_COMPLETE.md  NETWORK_ARCHITECTURE.md  PARALLEL_ORCHESTRATOR_EVOLUTION.md  PROJECT_COMPLETE.md  README.md  demo.py  demo_complete.py  demo_distributed.py  demo_final.py  demo_hybrid_parallel.py  demo_multi_agent.py  demo_p0_improvements.py  demo_p1_improvements.py  demo_p2_improvements.py  demo_p2_realistic.py  demo_p3_improvements.py  demo_parallel_simple.py  demo_phase2.py  demo_phase3.py  demo_pure.py  demo_real_api.py  demo_robust_parallel.py  mcp.yaml  parallel_orchestrator_tool.py  pyproject.toml  requirements.txt  start.sh  test_integration.py  test_real_api.py
(+3480 files in other folders)
